# comfyui-if_gemini-PatchV2

./: COMPATIBILITY_NOTICE.md  OPENROUTER_README.md  README.md  api_routes.py  env_utils.py  example.env  gemini_node.py  pyproject.toml
web/: gemini_extension.js
web/js/: gemini_node.js
